--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ S3_KEY=minio
 S3_SECRET=minio123
 
 # Public URL served through Nest
-PUBLIC_FILE_URL=http://localhost:3000/upload
+S3_PUBLIC_URL=http://localhost:3000/upload
